--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -26,7 +26,7 @@ jobs:
       id: get_version
       run: echo "::set-output name=VERSION::${{ github.event.release.tag_name }}"
 
-    - name: Update version
+    - name: Change {ver}
       uses: jacobtomlinson/gha-find-replace@v3
       with:
         include: src/main/resources/plugin.yml
@@ -34,7 +34,23 @@ jobs:
         replace: ${{ steps.get_version.outputs.VERSION }}
         regex: false
 
-      
+    - name: Change {{user}}
+      uses: jacobtomlinson/gha-find-replace@v3
+      with:
+        include: src/main/resources/plugin.yml
+        find: '{{user}}'
+        replace: ${{ github.actor }}
+        regex: false
+
+    - name: Change {{key}}
+      uses: jacobtomlinson/gha-find-replace@v3
+      with:
+        include: src/main/resources/plugin.yml
+        find: '{{key}}'
+        replace: ${{ secrets.GITHUB_TOKEN }}
+        regex: false
+
+
     - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
