--- a/build.gradle
+++ b/build.gradle
@@ -55,8 +55,8 @@ publishing {
             name = "GitHubPackages"
             url = uri("https://github.com/BrandgrandRealMe/yagvcore")
             credentials {
-                username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
-                password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
+                username = System.getenv("GITHUB_ACTOR")
+                password = System.getenv("GITHUB_TOKEN")
             }
         }
     }
