--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -12,11 +12,11 @@ on:
     types: [created]
 
 jobs:
-  build:
+  buildandupload:
 
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
 
     steps:
@@ -66,9 +66,9 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
 
-    - name: Upload Artifact To Release
-      uses: Shopify/upload-to-release@v2.0.0
+    - name: Upload Release Assets
+      uses: alexellis/upload-assets@0.4.1
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
       with:
-        name: yagvcore.jar
-        path: build/libs/*.jar
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        asset_paths: '["build/libs/*.jar"]'
